Changed cv to LOOCV

--- a/last_hws/hw4/concrete.Rmd
+++ b/last_hws/hw4/concrete.Rmd
@@ -36,7 +36,7 @@ estimateModel <- function(formula) {
   model <- lm(formula, data.concrete)
   print(AIC(model))
   print(summary(model))
-  print(tune(lm, as.formula(model), data = data.concrete, tunecontrol = tune.control(sampling = "cross")))
+  print(tune(lm, as.formula(model), data = data.concrete, tunecontrol = tune.control(cross = nrow(data.concrete))))
 }
 
 ```
