--- a/spring_bi/hw2.Rmd
+++ b/spring_bi/hw2.Rmd
@@ -71,12 +71,12 @@ for (f in fs) {
 Задание 2
 
 ```{r}
+permutations <- sample_size / 5
 for (a in (seq(1, 100) / 10)) {
   print(a)
   xs <- generate_xs(sample_size, a = a)
   r_star <- r1(xs)
   rs <- 0
-  permutations <- sample_size / 10 
   for (i in c(1:permutations)) {
     if (r1(sample(xs)) > r_star) {
       rs <- rs + 1
@@ -89,4 +89,37 @@ for (a in (seq(1, 100) / 10)) {
 
 Задание 3
 
+Исследуем мощность перестановочного t-критерия и сравним с мощностью параметрического t-критерия.
+
+```{r}
+border_p_value <- 0.05
+rejector <- function(p) {
+  if (p < border_p_value) {
+    "REJECTED"
+  } else {
+    "NOT REJECTED"
+  }
+}
+library(RVAideMemoire)
+sd = 2.3
+for (diff in seq(1, 100) / 100) {
+  print(diff)
+  print("Parametric t-test")
+  xs <- rnorm(sample_size, mean = diff, sd = sd)
+  ys <- rnorm(sample_size, sd = sd)
+  print(rejector(t.test(xs, ys)$p.value))
+  print("Permutation t-test")
+  sink("/dev/null")
+  p.v <- perm.t.test(xs, ys, nperm = permutations)$p.value
+  sink()
+  print(rejector(p.v))
+}
+```
+
+Сложно заметить, что мощность перестановочного критерия ниже, но похоже, что в районе 0.54 параметрический тест относительно уверенно отвергает нулевую гипотезу, когда перестановочный тест - нет.
+
 Задание 4
+
+```{r}
+
+```
