--- a/spring_bi/hw2.Rmd
+++ b/spring_bi/hw2.Rmd
@@ -47,7 +47,7 @@ for (a in (seq(1, 100) / 10)) {
 }
 ```
 
-Как видно на значениях a в районе 6.1 и ошибках из стандартного нормального распределения гипотеза больше не отвергается.
+Как видно на значениях a в районе 6.1 и ошибках из стандартного нормального распределения гипотеза начинает отвергаться.
 
 Проверим мощность критерия на разных распределениях
 
@@ -66,7 +66,7 @@ for (f in fs) {
 }
 ```
 
-Мы отвергаем нулевую гипотезу для всех распределений кроме t_2.
+Мы не отвергаем нулевую гипотезу для всех распределений кроме t_2.
 
 Задание 2
 
